; ModuleID = '/home/carl/AnghaBench/libgit2/tests/diff/extr_index.c_test_diff_index__not_in_head_conflicted.c'
source_filename = "/home/carl/AnghaBench/libgit2/tests/diff/extr_index.c_test_diff_index__not_in_head_conflicted.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_7__ = type { i8*, i32, i32, %struct.TYPE_6__ }
%struct.TYPE_6__ = type { i32 }
%struct.TYPE_8__ = type { i32 }

@.str = private unnamed_addr constant [12 x i8] c"26a125ee1bf\00", align 1
@g_repo = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [17 x i8] c"file_not_in_head\00", align 1
@GIT_FILEMODE_BLOB = common dso_local global i32 0, align 4
@.str.2 = private unnamed_addr constant [41 x i8] c"2bd0a343aeef7a2cf0d158478966a6e587ff3863\00", align 1
@GIT_DELTA_CONFLICTED = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @test_diff_index__not_in_head_conflicted() #0 {
  %1 = alloca i8*, align 8
  %2 = alloca %struct.TYPE_7__, align 8
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca %struct.TYPE_8__*, align 8
  %6 = alloca i32*, align 8
  store i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str, i64 0, i64 0), i8** %1, align 8
  %7 = bitcast %struct.TYPE_7__* %2 to i8*
  call void @llvm.memset.p0i8.i64(i8* align 8 %7, i8 0, i64 24, i1 false)
  %8 = load i32, i32* @g_repo, align 4
  %9 = load i8*, i8** %1, align 8
  %10 = call i32* @resolve_commit_oid_to_tree(i32 %8, i8* %9)
  store i32* %10, i32** %6, align 8
  %11 = load i32, i32* @g_repo, align 4
  %12 = call i32 @git_repository_index(i32** %3, i32 %11)
  %13 = call i32 @cl_git_pass(i32 %12)
  %14 = load i32*, i32** %3, align 8
  %15 = load i32*, i32** %6, align 8
  %16 = call i32 @git_index_read_tree(i32* %14, i32* %15)
  %17 = call i32 @cl_git_pass(i32 %16)
  %18 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %2, i32 0, i32 0
  store i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str.1, i64 0, i64 0), i8** %18, align 8
  %19 = load i32, i32* @GIT_FILEMODE_BLOB, align 4
  %20 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %2, i32 0, i32 2
  store i32 %19, i32* %20, align 4
  %21 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %2, i32 0, i32 1
  %22 = call i32 @git_oid_fromstr(i32* %21, i8* getelementptr inbounds ([41 x i8], [41 x i8]* @.str.2, i64 0, i64 0))
  %23 = load i32*, i32** %3, align 8
  %24 = call i32 @git_index_conflict_add(i32* %23, i32* null, i32* null, %struct.TYPE_7__* %2)
  %25 = call i32 @cl_git_pass(i32 %24)
  %26 = load i32, i32* @g_repo, align 4
  %27 = load i32*, i32** %6, align 8
  %28 = load i32*, i32** %3, align 8
  %29 = call i32 @git_diff_tree_to_index(i32** %4, i32 %26, i32* %27, i32* %28, i32* null)
  %30 = call i32 @cl_git_pass(i32 %29)
  %31 = load i32*, i32** %4, align 8
  %32 = call i32 @git_diff_num_deltas(i32* %31)
  %33 = call i32 @cl_assert_equal_i(i32 %32, i32 1)
  %34 = load i32*, i32** %4, align 8
  %35 = call %struct.TYPE_8__* @git_diff_get_delta(i32* %34, i32 0)
  store %struct.TYPE_8__* %35, %struct.TYPE_8__** %5, align 8
  %36 = load %struct.TYPE_8__*, %struct.TYPE_8__** %5, align 8
  %37 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %36, i32 0, i32 0
  %38 = load i32, i32* %37, align 4
  %39 = load i32, i32* @GIT_DELTA_CONFLICTED, align 4
  %40 = call i32 @cl_assert_equal_i(i32 %38, i32 %39)
  %41 = load i32*, i32** %4, align 8
  %42 = call i32 @git_diff_free(i32* %41)
  %43 = load i32*, i32** %3, align 8
  %44 = call i32 @git_index_free(i32* %43)
  %45 = load i32*, i32** %6, align 8
  %46 = call i32 @git_tree_free(i32* %45)
  ret void
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memset.p0i8.i64(i8* nocapture writeonly, i8, i64, i1 immarg) #1

declare dso_local i32* @resolve_commit_oid_to_tree(i32, i8*) #2

declare dso_local i32 @cl_git_pass(i32) #2

declare dso_local i32 @git_repository_index(i32**, i32) #2

declare dso_local i32 @git_index_read_tree(i32*, i32*) #2

declare dso_local i32 @git_oid_fromstr(i32*, i8*) #2

declare dso_local i32 @git_index_conflict_add(i32*, i32*, i32*, %struct.TYPE_7__*) #2

declare dso_local i32 @git_diff_tree_to_index(i32**, i32, i32*, i32*, i32*) #2

declare dso_local i32 @cl_assert_equal_i(i32, i32) #2

declare dso_local i32 @git_diff_num_deltas(i32*) #2

declare dso_local %struct.TYPE_8__* @git_diff_get_delta(i32*, i32) #2

declare dso_local i32 @git_diff_free(i32*) #2

declare dso_local i32 @git_index_free(i32*) #2

declare dso_local i32 @git_tree_free(i32*) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
